# sifen

./: .gitignore  .xsdata.xml  CLAUDE.md  MIT-LICENSE  README.md  plano-sifenlib.md  pyproject.toml  script.sh
.github/workflows/: tests.yml
pysifen/: CommonMixin.py  assinatura.py
pysifen/de/bindings/v150/: __init__.py  de_v150.py  evento_types_v150.py  evento_v150.py  fe_v141.py  monedas_v100.py  paises_v100.py  prot_proces_de_v150.py  prot_proces_eventos_v141.py  si_consulta_archivo_ruc.py  si_consulta_dteasync.py  si_recep_evento_set_v150.py  si_recep_evento_v150.py  ws_consulta_archivo_ruc.py  ws_si_cons_de_v141.py  ws_si_cons_dte.py  ws_si_cons_dteasync.py  ws_si_cons_lote_v141.py  ws_si_cons_ruc_v141.py  ws_si_recep_de_v150.py  ws_si_recep_evento_v150.py  ws_si_recep_lote_de_v141.py  xmldsig_core_schema.py
pysifen/de/samples/v150/: factura_electronica.xml
pysifen/de/schemas/v150/: DE_v150.xsd  EventoCanc_v141.xsd  EventoInut_v141.xsd  RecEventoCanc_v141.xsd  RecEventoInut_v141.xsd  WS_ConsultaArchivoRuc.xsd  WS_SiConsDTEAsync.xsd  WS_SiConsLote_v141.xsd  WS_SiConsRUC_v141.xsd  WS_SiRecepEvento_v141.xsd  WS_SiRecepLoteDE_v141.xsd  protProcesDE_v150.xsd  siConsultaDTE.xsd  siRecepEvento_v141.xsd
pysifen/transmissao/: __init__.py  base.py  consulta.py  de.py  evento.py
sifenlib/: CommonMixin.py  assinatura.py
sifenlib/de/bindings/v150/: __init__.py  de_types_v150.py  de_v150.py  departamentos_v141.py  evento_types_v150.py  evento_v150.py  fe_types_v141.py  fe_v141.py  monedas_v100.py  prot_proces_de_v150.py  prot_proces_eventos_v141.py  si_consulta_archivo_ruc.py  si_consulta_dteasync.py  si_recep_evento_set_v150.py  si_recep_evento_v150.py  unidades_medida_v141.py  ws_consulta_archivo_ruc.py  ws_si_cons_de_v141.py  ws_si_cons_dte.py  ws_si_cons_dteasync.py  ws_si_cons_lote_v141.py  ws_si_cons_ruc_v141.py  ws_si_recep_de_v150.py  ws_si_recep_evento_v150.py  ws_si_recep_lote_de_v141.py  xmldsig_core_schema.py
sifenlib/de/samples/v150/: autofactura.xml  nota_credito.xml  nota_remision.xml
sifenlib/de/schemas/v150/: Evento_v141.xsd  Evento_v150.xsd  FE_v141.xsd  WS_SiConsDE_v141.xsd  WS_SiConsDTE.xsd  WS_SiRecepDE_v141.xsd  WS_SiRecepDE_v150.xsd  WS_SiRecepEvento_v150.xsd  protProcesDE_v141.xsd  siConsultaArchivoRuc.xsd  siConsultaDTEAsync.xsd  siRecepDE_v141.xsd  siRecepDE_v150.xsd  siRecepEventoEmisor_v150.xsd  siRecepEventoReceptor_v150.xsd  siRecepEventoSet_v150.xsd  siRecepEvento_v150.xsd
sifenlib/transmissao/: __init__.py  base.py  config.py  consulta.py  de.py  evento.py
tests/: test_assinatura.py  test_cert.pfx  test_de.py  test_eventos.py  test_generate_de.py  test_schema_versions.py  test_transmissao.py  test_ws.py
