[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysifen"
description = "Bindings Python para ler e gerar XML do SIFEN (Paraguay)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "mileo", email = "mileo@kmee.com.br" },
]
keywords = [
    "sifen", "factura-electronica", "paraguay", "ekuatia",
    "xml", "xsdata", "documento-electronico", "set",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "xsdata",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KMEE/pysifen"
Source = "https://github.com/KMEE/pysifen"

[project.optional-dependencies]
sign = [
    "signxml>=3.0",
    "cryptography",
    "lxml",
]
soap = ["xsdata[soap]"]
transmissao = [
    "xsdata[soap]",
    "signxml>=3.0",
    "cryptography",
    "requests",
    "lxml",
]
test = [
    "pytest",
    "pytest-cov",
    "xmldiff",
    "lxml",
]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
include = ["pysifen*"]

[tool.setuptools.dynamic]
version = {attr = "pysifen.__version__"}

[tool.setuptools.package-data]
"pysifen" = ["de/schemas/**/*.xsd", "de/samples/**/*.xml"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"pysifen/de/bindings/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
